# hfst-ospell-old-cpp

./: .gitignore  .travis.yml  .uncrustify.cfg  AUTHORS  Makefile.am  README  ZHfstOspeller.cc  ZHfstOspeller.h  ZHfstOspeller.i  ZHfstOspellerXmlMetadata.cc  ZHfstOspellerXmlMetadata.h  autogen.sh  configure.ac  hfst-ol.cc  hfst-ol.h  main.cc  ol-exceptions.h  ospell.cc  ospell.h
m4/: ax_jni_include_dir.m4
src/: ZHfstOspeller.cc  ZHfstOspeller.h  ZHfstOspeller.i  ZHfstOspellerXmlMetadata.cc  hfst-ol.h  main.cc  ospell.cc
test/: bundle.sh  test.cc
